--- a/src/main/resources/ku/cs/allBookInProgram.fxml
+++ b/src/main/resources/ku/cs/allBookInProgram.fxml
@@ -2,88 +2,180 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: fff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.AllTypeBookController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.TypeBookController">
    <children>
-      <HBox fx:id="head" prefHeight="69.0" prefWidth="1024.0">
-         <children>
-            <ImageView fitHeight="68.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../../../../../project-641-javapai/src/main/resources/ku/cs/image/javapai.png" />
-               </image>
-               <HBox.margin>
-                  <Insets left="10.0" />
-               </HBox.margin>
-            </ImageView>
-            <MenuButton mnemonicParsing="false" onAction="#handleTypeBookButton" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">
-               <font>
-                  <Font name="JasmineUPC" size="25.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="40.0" top="13.0" />
-               </HBox.margin>
-            </MenuButton>
-            <Button mnemonicParsing="false" onAction="#handleAllTypeBookButton" prefHeight="38.0" prefWidth="165.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="หนังสือทั้งหมด" textFill="WHITE">
-               <font>
-                  <Font name="JasmineUPC" size="25.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="30.0" right="-20.0" top="13.0" />
-               </HBox.margin>
-            </Button>
-            <Button mnemonicParsing="false" onAction="#handleToInformationButton" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="ข้อมูลผู้ใช้" textFill="WHITE">
-               <font>
-                  <Font name="JasmineUPC" size="25.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="55.0" right="40.0" top="13.0" />
-               </HBox.margin>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;">
-               <graphic>
-                  <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../../../../../project-641-javapai/src/main/resources/ku/cs/image/heart.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <HBox.margin>
-                  <Insets top="13.0" />
-               </HBox.margin>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;" textAlignment="RIGHT">
-               <graphic>
-                  <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../../../../../project-641-javapai/src/main/resources/ku/cs/image/basket.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <HBox.margin>
-                  <Insets top="13.0" />
-               </HBox.margin>
-            </Button>
-            <TextField prefHeight="36.0" prefWidth="248.0" promptText="ค้นหาข้อมูล" style="-fx-background-color: #e7e1e1; -fx-background-radius: 20;">
-               <font>
-                  <Font name="JasmineUPC" size="24.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="20.0" right="20.0" top="15.0" />
-               </HBox.margin>
-            </TextField>
-         </children>
-      </HBox>
-      <FlowPane fx:id="bookListFlowPane" alignment="TOP_CENTER" hgap="10.0" layoutY="70.0" prefHeight="706.0" prefWidth="1032.0" vgap="10.0" />
+      <BorderPane layoutY="52.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <top>
+            <VBox prefHeight="100.0" prefWidth="1024.0" BorderPane.alignment="CENTER">
+               <children>
+                  <HBox prefHeight="69.0" prefWidth="1024.0">
+                     <children>
+                        <HBox fx:id="head" prefHeight="69.0" prefWidth="1024.0">
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#handleToHomeButton" style="-fx-background-color: white;">
+                                 <graphic>
+                                    <ImageView fitHeight="68.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@image/javapai.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                              <MenuButton fx:id="bookTypeMenuItem" mnemonicParsing="false" onAction="#handleTypeBookButton" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">
+                                 <font>
+                                    <Font name="JasmineUPC" size="25.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets left="40.0" top="13.0" />
+                                 </HBox.margin>
+                              </MenuButton>
+                              <Button mnemonicParsing="false" onAction="#handlePageAllTypeBookButton" prefHeight="38.0" prefWidth="165.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="หนังสือทั้งหมด" textFill="WHITE">
+                                 <font>
+                                    <Font name="JasmineUPC" size="25.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets left="30.0" right="-20.0" top="13.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Button mnemonicParsing="false" onAction="#handleDetailUserButton" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="ข้อมูลผู้ใช้" textFill="WHITE">
+                                 <font>
+                                    <Font name="JasmineUPC" size="25.0" />
+                                 </font>
+                                 <opaqueInsets>
+                                    <Insets />
+                                 </opaqueInsets>
+                                 <HBox.margin>
+                                    <Insets left="55.0" right="40.0" top="13.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;">
+                                 <graphic>
+                                    <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@image/heart.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <HBox.margin>
+                                    <Insets top="13.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;" textAlignment="RIGHT">
+                                 <graphic>
+                                    <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@image/basket.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <HBox.margin>
+                                    <Insets top="13.0" />
+                                 </HBox.margin>
+                              </Button>
+                              <TextField prefHeight="36.0" prefWidth="248.0" promptText="ค้นหาข้อมูล" style="-fx-background-color: #e7e1e1; -fx-background-radius: 20;">
+                                 <font>
+                                    <Font name="JasmineUPC" size="24.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets left="20.0" right="20.0" top="13.0" />
+                                 </HBox.margin>
+                              </TextField>
+                           </children>
+                        </HBox>
+                     </children></HBox>
+                  <GridPane>
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin>
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="684.7999847412109" minWidth="10.0" prefWidth="684.7999847412109" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="969.1999816894531" minWidth="10.0" prefWidth="340.00001525878906" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <HBox alignment="CENTER_LEFT" prefHeight="71.0" prefWidth="1024.0">
+                           <children>
+                              <Text fill="#a05e07" strokeType="OUTSIDE" strokeWidth="0.0" text="หนังสือทั้งหมด">
+                                 <HBox.margin>
+                                    <Insets left="50.0" top="20.0" />
+                                 </HBox.margin>
+                                 <font>
+                                    <Font name="JasmineUPC" size="30.0" />
+                                 </font>
+                              </Text>
+                              <Text fill="#b09f9f" strokeType="OUTSIDE" strokeWidth="0.0" text="|">
+                                 <font>
+                                    <Font name="JasmineUPC Bold" size="36.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets left="5.0" top="20.0" />
+                                 </HBox.margin>
+                              </Text>
+                              <Label fx:id="bookType" text="ประเภททั้งหมด" textFill="#b09f9f">
+                                 <HBox.margin>
+                                    <Insets left="5.0" top="20.0" />
+                                 </HBox.margin>
+                                 <font>
+                                    <Font name="JasmineUPC" size="24.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                        </HBox>
+                        <HBox spacing="20.0" GridPane.columnIndex="1">
+                           <children>
+                              <Button fx:id="MaxPriceToLowPriceButton" mnemonicParsing="false" onAction="#handleMaxPriceToLowPrice" prefHeight="28.0" prefWidth="132.0" style="-fx-background-radius: 20;" text="ราคาน้อยไปมาก">
+                                 <font>
+                                    <Font name="JasmineUPC" size="20.0" />
+                                 </font>
+                              </Button>
+                              <Button fx:id="lowPriceToMaxPriceButton" mnemonicParsing="false" onAction="#handleLowPriceToMaxPrice" prefHeight="34.0" prefWidth="122.0" style="-fx-background-radius: 20;" text="ราคามากไปน้อย">
+                                 <font>
+                                    <Font name="JasmineUPC" size="20.0" />
+                                 </font>
+                              </Button>
+                           </children>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </HBox>
+                     </children>
+                  </GridPane>
+               </children>
+            </VBox>
+         </top>
+         <center>
+            <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="669.0" prefWidth="1024.0" style="-fx-background-color: #fff;" BorderPane.alignment="CENTER">
+               <content>
+                  <FlowPane fx:id="bookListFlowPane" alignment="TOP_CENTER" columnHalignment="CENTER" hgap="10.0" style="-fx-background-color: #fff;" vgap="10.0">
+                     <padding>
+                        <Insets left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </FlowPane>
+               </content>
+            </ScrollPane>
+         </center>
+      </BorderPane>
    </children>
 </AnchorPane>
