--- a/src/main/resources/ku/cs/pageBookType.fxml
+++ b/src/main/resources/ku/cs/pageBookType.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -23,21 +25,17 @@
    <children>
       <BorderPane layoutY="52.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
-            <VBox prefHeight="100.0" prefWidth="1024.0" BorderPane.alignment="CENTER">
+            <VBox prefHeight="120.0" prefWidth="1024.0" BorderPane.alignment="CENTER">
                <children>
                   <HBox prefHeight="69.0" prefWidth="1024.0">
                      <children>
-                        <HBox fx:id="head" prefHeight="69.0" prefWidth="1024.0">
+                        <HBox fx:id="head" prefHeight="69.0" prefWidth="1024.0" styleClass="backgroundColorInHeadPages" stylesheets="@style/style.css">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#handleToHomeButton" style="-fx-background-color: white;">
-                                 <graphic>
-                                    <ImageView fitHeight="68.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@image/javapai.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                              </Button>
+                              <ImageView fitHeight="68.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@image/logoverLightBrown.png" />
+                                 </image>
+                              </ImageView>
                               <MenuButton fx:id="bookTypeMenuItem" mnemonicParsing="false" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">
                                  <font>
                                     <Font name="JasmineUPC" size="25.0" />
@@ -54,52 +52,59 @@
                                     <Insets left="30.0" right="-20.0" top="13.0" />
                                  </HBox.margin>
                               </Button>
-                              <Button mnemonicParsing="false" onAction="#handleDetailUserButton" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="ข้อมูลผู้ใช้" textFill="WHITE">
+                              <Button fx:id="status" mnemonicParsing="false" prefHeight="20.0" prefWidth="91.0" style="-fx-background-radius: 20;" text="Status" textFill="WHITE">
                                  <font>
                                     <Font name="JasmineUPC" size="25.0" />
                                  </font>
                                  <opaqueInsets>
                                     <Insets />
                                  </opaqueInsets>
+                                 <stylesheets>
+                                    <URL value="@style/style.css" />
+                                    <URL value="@style/PrimaryTheme.css" />
+                                 </stylesheets>
+                                 <styleClass>
+                                    <String fx:value="font_rsu_12pt" />
+                                    <String fx:value="backgroundColorLightBrownButton" />
+                                 </styleClass>
                                  <HBox.margin>
-                                    <Insets left="55.0" right="40.0" top="13.0" />
+                                    <Insets left="250.0" right="25.0" top="16.0" />
                                  </HBox.margin>
                               </Button>
-                              <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;">
-                                 <graphic>
-                                    <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@image/heart.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                                 <HBox.margin>
-                                    <Insets top="13.0" />
-                                 </HBox.margin>
-                              </Button>
-                              <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;" textAlignment="RIGHT">
-                                 <graphic>
-                                    <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@image/basket.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                                 <HBox.margin>
-                                    <Insets top="13.0" />
-                                 </HBox.margin>
-                              </Button>
-                              <TextField prefHeight="36.0" prefWidth="248.0" promptText="ค้นหาข้อมูล" style="-fx-background-color: #e7e1e1; -fx-background-radius: 20;">
+                              <Button mnemonicParsing="false" onAction="#handleToInformationButton" prefHeight="46.0" prefWidth="202.0" style="-fx-background-radius: 30;" stylesheets="@style/PrimaryTheme.css" textFill="WHITE">
                                  <font>
-                                    <Font name="JasmineUPC" size="24.0" />
+                                    <Font name="JasmineUPC" size="25.0" />
                                  </font>
+                                 <opaqueInsets>
+                                    <Insets />
+                                 </opaqueInsets>
+                                 <graphic>
+                                    <Label fx:id="usernameInHead" alignment="CENTER" prefHeight="31.0" prefWidth="167.0" styleClass="font_rsu_12pt" stylesheets="@style/style.css" text="Username" textFill="WHITE">
+                                       <graphic>
+                                          <ImageView fx:id="img" fitHeight="30.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="radius">
+                                             <viewport>
+                                                <Rectangle2D />
+                                             </viewport>
+                                          </ImageView>
+                                       </graphic>
+                                    </Label>
+                                 </graphic>
+                                 <styleClass>
+                                    <String fx:value="font_rsu_12pt" />
+                                    <String fx:value="backgroundColorLightBrownButton" />
+                                 </styleClass>
                                  <HBox.margin>
-                                    <Insets left="20.0" right="20.0" top="13.0" />
+                                    <Insets top="10.0" />
                                  </HBox.margin>
-                              </TextField>
+                              </Button>
                            </children>
                         </HBox>
                      </children></HBox>
+                  <FlowPane alignment="TOP_CENTER" columnHalignment="CENTER" hgap="10.0" prefHeight="100.0" prefWidth="1024.0" style="-fx-background-color: #fff;" vgap="10.0">
+                     <padding>
+                        <Insets left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </FlowPane>
                   <GridPane>
                      <VBox.margin>
                         <Insets bottom="20.0" />
@@ -145,12 +150,12 @@
                         </HBox>
                         <HBox spacing="20.0" GridPane.columnIndex="1">
                            <children>
-                              <Button fx:id="MaxPriceToLowPriceButton" mnemonicParsing="false" onAction="#handleMaxPriceToLowPrice" prefHeight="28.0" prefWidth="132.0" style="-fx-background-radius: 20;" text="ราคาน้อยไปมาก">
+                              <Button mnemonicParsing="false" onAction="#handleLowPriceToMaxPrice" prefHeight="28.0" prefWidth="132.0" style="-fx-background-radius: 20;" text="ราคาน้อยไปมาก">
                                  <font>
                                     <Font name="JasmineUPC" size="20.0" />
                                  </font>
                               </Button>
-                              <Button fx:id="lowPriceToMaxPriceButton" mnemonicParsing="false" onAction="#handleLowPriceToMaxPrice" prefHeight="34.0" prefWidth="122.0" style="-fx-background-radius: 20;" text="ราคามากไปน้อย">
+                              <Button mnemonicParsing="false" onAction="#handleMaxPriceToLowPrice" prefHeight="34.0" prefWidth="122.0" style="-fx-background-radius: 20;" text="ราคามากไปน้อย">
                                  <font>
                                     <Font name="JasmineUPC" size="20.0" />
                                  </font>
@@ -166,9 +171,9 @@
             </VBox>
          </top>
          <center>
-            <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="669.0" prefWidth="1024.0" style="-fx-background-color: #fff;" BorderPane.alignment="CENTER">
+            <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="500.0" prefWidth="1024.0" style="-fx-background-color: #fff;" BorderPane.alignment="CENTER">
               <content>
-                  <FlowPane fx:id="bookListFlowPane" alignment="TOP_CENTER" columnHalignment="CENTER" hgap="10.0" style="-fx-background-color: #fff;" vgap="10.0">
+                  <FlowPane fx:id="bookListFlowPane" alignment="TOP_CENTER" columnHalignment="CENTER" hgap="10.0" prefHeight="636.0" prefWidth="1022.0" style="-fx-background-color: #fff;" vgap="10.0">
                      <padding>
                         <Insets left="10.0" right="10.0" top="10.0" />
                      </padding>
