--- a/src/main/resources/ku/cs/adminInfoChoice.fxml
+++ b/src/main/resources/ku/cs/adminInfoChoice.fxml
@@ -220,7 +220,7 @@
                                     <Insets top="5.0" />
                                  </VBox.margin>
                               </Text>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ทานตะวันหิวแสง" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="อยากเล่นสเก็ต" />
                            </children>
                         </VBox>
                           </children>
