--- a/src/main/resources/ku/cs/applyToBeASeller.fxml
+++ b/src/main/resources/ku/cs/applyToBeASeller.fxml
@@ -22,88 +22,14 @@
          <top>
             <HBox prefHeight="69.0" prefWidth="1024.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button mnemonicParsing="false" onAction="#handleToHomeButton" style="-fx-background-color: white;">
-                     <graphic>
-                        <ImageView fitHeight="68.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@image/javapai.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-<!--                  <MenuButton mnemonicParsing="false" onAction="#handleTypeBookButton" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">-->
-<!--                     <items>-->
-<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือการ์ตูน" />-->
-<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิตยสาร" />-->
-<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิยาย" />-->
-<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือเรียน" />-->
-<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="e-book" />-->
-<!--                     </items>-->
-<!--                     <font>-->
-<!--                        <Font name="JasmineUPC" size="25.0" />-->
-<!--                     </font>-->
-<!--                     <HBox.margin>-->
-<!--                        <Insets left="40.0" top="13.0" />-->
-<!--                     </HBox.margin>-->
-<!--                  </MenuButton>-->
-<!--                  <Button mnemonicParsing="false" onAction="#handleAllTypeBookButton" prefHeight="38.0" prefWidth="165.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="หนังสือทั้งหมด" textFill="WHITE">-->
-<!--                     <font>-->
-<!--                        <Font name="JasmineUPC" size="25.0" />-->
-<!--                     </font>-->
-<!--                     <HBox.margin>-->
-<!--                        <Insets left="30.0" right="-20.0" top="13.0" />-->
-<!--                     </HBox.margin>-->
-<!--                  </Button>-->
-<!--                  <Button mnemonicParsing="false" onAction="#handleToInformationButton" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;">-->
-<!--                     <font>-->
-<!--                        <Font size="15.0" />-->
-<!--                     </font>-->
-<!--                     <graphic>-->
-<!--                        <Label fx:id="usernameLabel" alignment="CENTER" prefHeight="27.0" prefWidth="72.0" style="-fx-background-radius: 20;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="ข้อมูลผู้ใช้" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" wrapText="true">-->
-<!--                           <font>-->
-<!--                              <Font name="JasmineUPC" size="36.0" />-->
-<!--                           </font>-->
-<!--                        </Label>-->
-<!--                     </graphic>-->
-<!--                     <opaqueInsets>-->
-<!--                        <Insets />-->
-<!--                     </opaqueInsets>-->
-<!--                     <HBox.margin>-->
-<!--                        <Insets left="55.0" right="40.0" top="13.0" />-->
-<!--                     </HBox.margin>-->
-<!--                  </Button>-->
-                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;">
-                     <graphic>
-                        <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@image/heart.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                     <HBox.margin>
-                        <Insets top="13.0" />
-                     </HBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;" textAlignment="RIGHT">
-                     <graphic>
-                        <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@image/basket.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                     <HBox.margin>
-                        <Insets top="13.0" />
-                     </HBox.margin>
-                  </Button>
-                  <TextField prefHeight="36.0" prefWidth="248.0" promptText="ค้นหาข้อมูล" style="-fx-background-color: #e7e1e1; -fx-background-radius: 20;">
-                     <font>
-                        <Font name="JasmineUPC" size="24.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="20.0" right="20.0" top="13.0" />
-                     </HBox.margin>
-                  </TextField>
+                  <GridPane fx:id="gridpane" prefHeight="69.0" prefWidth="1024.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                  </GridPane>
                </children></HBox>
          </top>
          <left>
