--- a/src/main/resources/ku/cs/seller.fxml
+++ b/src/main/resources/ku/cs/seller.fxml
@@ -26,81 +26,14 @@
          <top>
             <HBox prefHeight="69.0" prefWidth="1024.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
                <children>
-                  <Button mnemonicParsing="false" onAction="#handleToHomeButton" style="-fx-background-color: white;">
-                     <graphic>
-                        <ImageView fitHeight="68.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@image/javapai.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-<!--                  <MenuButton mnemonicParsing="false" onAction="#handleTypeBookButton" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">-->
-<!--                     <items>-->
-<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือการ์ตูน" />-->
-<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิตยสาร" />-->
-<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิยาย" />-->
-<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือเรียน" />-->
-<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="e-book" />-->
-<!--                     </items>-->
-<!--                     <font>-->
-<!--                        <Font name="JasmineUPC" size="25.0" />-->
-<!--                     </font>-->
-<!--                     <HBox.margin>-->
-<!--                        <Insets left="40.0" top="13.0" />-->
-<!--                     </HBox.margin>-->
-<!--                  </MenuButton>-->
-<!--                  <Button mnemonicParsing="false" onAction="#handleAllTypeBookButton" prefHeight="38.0" prefWidth="165.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="หนังสือทั้งหมด" textFill="WHITE">-->
-<!--                     <font>-->
-<!--                        <Font name="JasmineUPC" size="25.0" />-->
-<!--                     </font>-->
-<!--                     <HBox.margin>-->
-<!--                        <Insets left="30.0" right="-20.0" top="13.0" />-->
-<!--                     </HBox.margin>-->
-<!--                  </Button>-->
-<!--                  <Button mnemonicParsing="false" onAction="#handleToInformationButton" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="ข้อมูลผู้ใช้" textFill="WHITE">-->
-<!--                     <font>-->
-<!--                        <Font name="JasmineUPC" size="25.0" />-->
-<!--                     </font>-->
-<!--                     <opaqueInsets>-->
-<!--                        <Insets />-->
-<!--                     </opaqueInsets>-->
-<!--                     <HBox.margin>-->
-<!--                        <Insets left="55.0" right="40.0" top="13.0" />-->
-<!--                     </HBox.margin>-->
-<!--                  </Button>-->
-                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;">
-                     <graphic>
-                        <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@image/heart.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                     <HBox.margin>
-                        <Insets top="13.0" />
-                     </HBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;" textAlignment="RIGHT">
-                     <graphic>
-                        <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@image/basket.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                     <HBox.margin>
-                        <Insets top="13.0" />
-                     </HBox.margin>
-                  </Button>
-                  <TextField prefHeight="36.0" prefWidth="248.0" promptText="ค้นหาข้อมูล" style="-fx-background-color: #e7e1e1; -fx-background-radius: 20;">
-                     <font>
-                        <Font name="JasmineUPC" size="24.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="20.0" right="20.0" top="13.0" />
-                     </HBox.margin>
-                  </TextField>
+                  <GridPane fx:id="gridPaneInHead" prefHeight="69.0" prefWidth="1024.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                  </GridPane>
                </children></HBox>
          </top>
          <left>
@@ -255,7 +188,7 @@
                               <Font name="JasmineUPC" size="32.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="bookPriceTextField" layoutX="380.0" layoutY="740.0" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" onKeyReleased="#handleKeyBookPrice" />
+                        <TextField fx:id="bookPriceTextField" layoutX="380.0" layoutY="740.0" onKeyReleased="#handleKeyBookPrice" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
                         <Label fx:id="NotificationBookISBN" layoutX="55.0" layoutY="495.0" textFill="#f20505">
                            <font>
                               <Font name="JasmineUPC" size="12.0" />
@@ -281,7 +214,7 @@
                               <Font name="JasmineUPC" size="24.0" />
                            </font>
                         </Label>
-                        <Label fx:id="NotificationBookPrice" layoutX="387.0" layoutY="781.0" textFill="#f20505" >
+                        <Label fx:id="NotificationBookPrice" layoutX="387.0" layoutY="781.0" textFill="#f20505">
                            <font>
                               <Font name="JasmineUPC" size="12.0" />
                            </font>
