--- a/src/main/resources/ku/cs/pageBookType.fxml
+++ b/src/main/resources/ku/cs/pageBookType.fxml
@@ -173,9 +173,9 @@
          <center>
             <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="500.0" prefWidth="1024.0" style="-fx-background-color: #fff;" BorderPane.alignment="CENTER">
               <content>
-                  <FlowPane fx:id="bookListFlowPane" alignment="TOP_CENTER" columnHalignment="CENTER" hgap="10.0" prefHeight="636.0" prefWidth="1022.0" style="-fx-background-color: #fff;" vgap="10.0">
+                  <FlowPane fx:id="bookListFlowPane" columnHalignment="CENTER" hgap="30.0" prefHeight="636.0" prefWidth="1022.0" style="-fx-background-color: #fff;" vgap="30.0">
                      <padding>
-                        <Insets left="10.0" right="10.0" top="10.0" />
+                        <Insets left="60.0" right="40.0" />
                      </padding>
                   </FlowPane>
               </content>
