--- a/src/main/resources/ku/cs/accountDetail.fxml
+++ b/src/main/resources/ku/cs/accountDetail.fxml
@@ -18,19 +18,6 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.DetailUser">
     <children>
         <BorderPane layoutX="-22.0" layoutY="3.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <top>
-                <HBox fx:id="head" prefHeight="68.0" prefWidth="1024.0" BorderPane.alignment="CENTER">
-               <children>
-                  <GridPane fx:id="gridPaneInHead" prefHeight="68.0" prefWidth="1024.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                  </GridPane>
-               </children></HBox>
-            </top>
             <left>
 
                 <!--            <HBox prefHeight="694.0" prefWidth="326.0" style="-fx-background-color: #F5DEB3;" BorderPane.alignment="CENTER">-->
@@ -56,7 +43,7 @@
                                         <Insets left="90.0" top="40.0" />
                                     </GridPane.margin>
                                 </ImageView>
-                                <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: BC986A; -fx-background-radius: 10;" text="ข้อมูลส่วนตัว" textFill="WHITE" GridPane.rowIndex="1">
+                                <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="ข้อมูลส่วนตัว" textFill="WHITE" GridPane.rowIndex="1">
                                     <GridPane.margin>
                                         <Insets left="70.0" top="10.0" />
                                     </GridPane.margin>
@@ -96,115 +83,138 @@
                     </children>
                 </HBox>
             </left>
-         <center>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <center>
+                <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                    <children>
+                        <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fffcf1" height="197.0" layoutX="17.0" layoutY="18.0" stroke="#fffcf1" strokeType="INSIDE" width="661.0" />
+                        <Label layoutX="47.0" layoutY="33.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Username">
+                            <font>
+                                <Font name="JasmineUPC" size="36.0" />
+                            </font>
+                        </Label>
+                        <Label layoutX="335.0" layoutY="34.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Birthday">
+                            <font>
+                                <Font name="JasmineUPC" size="36.0" />
+                            </font>
+                        </Label>
+                        <Label layoutX="48.0" layoutY="73.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Password">
+                            <font>
+                                <Font name="JasmineUPC" size="36.0" />
+                            </font>
+                        </Label>
+                        <Label layoutX="47.0" layoutY="117.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Firstname">
+                            <font>
+                                <Font name="JasmineUPC" size="36.0" />
+                            </font>
+                        </Label>
+                        <Label layoutX="47.0" layoutY="155.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Lastname">
+                            <font>
+                                <Font name="JasmineUPC" size="36.0" />
+                            </font>
+                        </Label>
+                        <Label layoutX="335.0" layoutY="74.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Phone">
+                            <font>
+                                <Font name="JasmineUPC" size="36.0" />
+                            </font>
+                        </Label>
+                        <Label layoutX="335.0" layoutY="118.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Sex">
+                            <font>
+                                <Font name="JasmineUPC" size="36.0" />
+                            </font>
+                        </Label>
+                        <Button layoutX="582.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleToEditInformationPageButton" prefHeight="31.0" prefWidth="82.0" style="-fx-background-color: F99F28;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="แก้ไข" textFill="WHITE">
+                            <font>
+                                <Font size="18.0" />
+                            </font>
+                        </Button>
+                        <Label layoutX="42.0" layoutY="242.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Address" textFill="#a05e07">
+                            <font>
+                                <Font name="JasmineUPC" size="36.0" />
+                            </font>
+                        </Label>
+                        <Line endX="451.73321533203125" endY="-3.0517578125E-5" layoutX="180.0" layoutY="279.0" startX="-134.93331909179688" startY="-3.0517578125E-5" />
+                        <Button layoutX="585.0" layoutY="403.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="93.0" style="-fx-background-color: F99F28;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="แก้ไขที่อยู่" textFill="WHITE">
+                            <font>
+                                <Font size="18.0" />
+                            </font>
+                        </Button>
+                        <Label layoutX="44.0" layoutY="415.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="My voucher" textFill="#a05e07">
+                            <font>
+                                <Font name="JasmineUPC" size="36.0" />
+                            </font>
+                        </Label>
+                        <Line endX="451.73321533203125" endY="-3.0517578125E-5" layoutX="190.0" layoutY="456.0" startX="-134.93331909179688" startY="-3.0517578125E-5" />
+                        <Label fx:id="birthdayLabel" layoutX="454.0" layoutY="41.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthday" textAlignment="CENTER">
+                            <font>
+                                <Font name="JasmineUPC" size="25.0" />
+                            </font>
+                        </Label>
+                        <Label fx:id="birthMonthLabel" layoutX="518.0" layoutY="41.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthmonth" textAlignment="CENTER">
+                            <font>
+                                <Font name="JasmineUPC" size="25.0" />
+                            </font>
+                        </Label>
+                        <Label fx:id="birthYearLabel" layoutX="604.0" layoutY="41.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthyear" textAlignment="CENTER">
+                            <font>
+                                <Font name="JasmineUPC" size="25.0" />
+                            </font>
+                        </Label>
+                        <Label fx:id="sexLabel" layoutX="455.0" layoutY="126.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="เพศ">
+                            <font>
+                                <Font name="JasmineUPC" size="25.0" />
+                            </font>
+                        </Label>
+                        <Label fx:id="phoneLabel" layoutX="455.0" layoutY="82.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="เบอร์โทรศัพท์">
+                            <font>
+                                <Font name="JasmineUPC" size="25.0" />
+                            </font>
+                        </Label>
+                        <Label fx:id="lastnameLabel" layoutX="180.0" layoutY="163.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Lastname">
+                            <font>
+                                <Font name="JasmineUPC" size="25.0" />
+                            </font>
+                        </Label>
+                        <Label fx:id="firstnameLabel" layoutX="180.0" layoutY="125.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Firstname">
+                            <font>
+                                <Font name="JasmineUPC" size="25.0" />
+                            </font>
+                        </Label>
+                        <Label fx:id="passwordLabel" layoutX="181.0" layoutY="81.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Password">
+                            <font>
+                                <Font name="JasmineUPC" size="25.0" />
+                            </font>
+                        </Label>
+                        <Label fx:id="usernameLabel" layoutX="181.0" layoutY="41.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Username">
+                            <font>
+                                <Font name="JasmineUPC" size="25.0" />
+                            </font>
+                        </Label>
+                  <HBox layoutX="54.0" layoutY="293.0" prefHeight="122.0" prefWidth="522.0">
+                     <children>
+                        <Label fx:id="addressLabel" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css">
+                           <HBox.margin>
+                              <Insets left="10.0" top="10.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
+                  </HBox>
+                    </children>
+                </AnchorPane>
+            </center>
+         <top>
+            <HBox prefHeight="69.0" prefWidth="1024.0" BorderPane.alignment="CENTER">
                <children>
-                  <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fffcf1" height="197.0" layoutX="17.0" layoutY="18.0" stroke="#fffcf1" strokeType="INSIDE" width="661.0" />
-                  <Label layoutX="47.0" layoutY="33.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Username">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="335.0" layoutY="34.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Birthday">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="48.0" layoutY="73.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Password">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="47.0" layoutY="117.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Firstname">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="47.0" layoutY="155.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Lastname">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="335.0" layoutY="74.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Phone">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="335.0" layoutY="118.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Sex">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <Button layoutX="582.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleToEditInformationPageButton" prefHeight="31.0" prefWidth="82.0" style="-fx-background-color: F99F28;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="แก้ไข" textFill="WHITE">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Button>
-                  <Label layoutX="42.0" layoutY="242.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="Address" textFill="#a05e07">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <Line endX="451.73321533203125" endY="-3.0517578125E-5" layoutX="180.0" layoutY="279.0" startX="-134.93331909179688" startY="-3.0517578125E-5" />
-                  <Button layoutX="279.0" layoutY="328.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="153.0" style="-fx-background-color: F99F28;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="เพิ่มข้อมูลที่อยู่" textFill="WHITE">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Button>
-                  <Label layoutX="44.0" layoutY="415.0" styleClass="font_rsu_18pt" stylesheets="@style/PrimaryTheme.css" text="My voucher" textFill="#a05e07">
-                     <font>
-                        <Font name="JasmineUPC" size="36.0" />
-                     </font>
-                  </Label>
-                  <Line endX="451.73321533203125" endY="-3.0517578125E-5" layoutX="190.0" layoutY="456.0" startX="-134.93331909179688" startY="-3.0517578125E-5" />
-                  <Label fx:id="birthdayLabel" layoutX="454.0" layoutY="41.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthday" textAlignment="CENTER">
-                     <font>
-                        <Font name="JasmineUPC" size="25.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="birthMonthLabel" layoutX="518.0" layoutY="41.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthmonth" textAlignment="CENTER">
-                     <font>
-                        <Font name="JasmineUPC" size="25.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="birthYearLabel" layoutX="604.0" layoutY="41.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Birthyear" textAlignment="CENTER">
-                     <font>
-                        <Font name="JasmineUPC" size="25.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="sexLabel" layoutX="455.0" layoutY="126.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="เพศ">
-                     <font>
-                        <Font name="JasmineUPC" size="25.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="phoneLabel" layoutX="455.0" layoutY="82.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="เบอร์โทรศัพท์">
-                     <font>
-                        <Font name="JasmineUPC" size="25.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="lastnameLabel" layoutX="180.0" layoutY="163.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Lastname">
-                     <font>
-                        <Font name="JasmineUPC" size="25.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="firstnameLabel" layoutX="180.0" layoutY="125.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Firstname">
-                     <font>
-                        <Font name="JasmineUPC" size="25.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="passwordLabel" layoutX="181.0" layoutY="81.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Password">
-                     <font>
-                        <Font name="JasmineUPC" size="25.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="usernameLabel" layoutX="181.0" layoutY="41.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Username">
-                     <font>
-                        <Font name="JasmineUPC" size="25.0" />
-                     </font>
-                  </Label>
+                  <GridPane fx:id="gridPaneInHead" prefHeight="69.0" prefWidth="1024.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                  </GridPane>
                </children>
-            </AnchorPane>
-         </center>
+            </HBox>
+         </top>
         </BorderPane>
     </children>
 </AnchorPane>
