--- a/src/main/resources/ku/cs/applyBook.fxml
+++ b/src/main/resources/ku/cs/applyBook.fxml
@@ -36,7 +36,7 @@
                </children></HBox>
          </top>
          <left>
-            <HBox prefHeight="694.0" prefWidth="326.0" style="-fx-background-color: #F5DEB3;" BorderPane.alignment="CENTER">
+            <HBox prefHeight="694.0" prefWidth="326.0" style="-fx-background-color: #F5DEB3;">
                <children>
                   <GridPane prefHeight="676.0" prefWidth="360.0">
                      <columnConstraints>
@@ -50,12 +50,12 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="userImageView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@image/Icon01.png" />
+                              <Image url="@image/Default.png" />
                            </image>
                            <GridPane.margin>
-                              <Insets left="90.0" top="40.0" />
+                              <Insets left="98.0" />
                            </GridPane.margin>
                         </ImageView>
                         <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" styleClass="font_jasmine_20pt" stylesheets="@style/PrimaryTheme.css" text="ข้อมูลส่วนตัว" textFill="WHITE" GridPane.rowIndex="1">
