--- a/src/main/resources/ku/cs/applyToBeASeller.fxml
+++ b/src/main/resources/ku/cs/applyToBeASeller.fxml
@@ -35,60 +35,64 @@
          <left>
             <HBox prefHeight="694.0" prefWidth="326.0" style="-fx-background-color: #F5DEB3;" BorderPane.alignment="CENTER">
                <children>
-                  <GridPane prefHeight="676.0" prefWidth="360.0">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints maxHeight="208.26669311523438" minHeight="10.0" prefHeight="208.26669311523438" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="132.9999755859375" minHeight="10.0" prefHeight="113.33330688476565" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
+                  <HBox prefHeight="694.0" prefWidth="326.0" style="-fx-background-color: #F5DEB3;">
                      <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@image/Icon01.png" />
-                           </image>
-                           <GridPane.margin>
-                              <Insets left="90.0" top="40.0" />
-                           </GridPane.margin>
-                        </ImageView>
-                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="ข้อมูลส่วนตัว" textFill="WHITE" GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets left="70.0" top="10.0" />
-                           </GridPane.margin>
-                           <font>
-                              <Font name="JasmineUPC" size="32.0" />
-                           </font>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="สินค้าในตะกร้า" textFill="WHITE" GridPane.rowIndex="2">
-                           <font>
-                              <Font name="JasmineUPC" size="32.0" />
-                           </font>
-                           <GridPane.margin>
-                              <Insets left="70.0" top="10.0" />
-                           </GridPane.margin>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="ข้อมูลการขาย" textFill="WHITE" GridPane.rowIndex="3">
-                           <GridPane.margin>
-                              <Insets left="70.0" top="10.0" />
-                           </GridPane.margin>
-                           <font>
-                              <Font name="JasmineUPC" size="32.0" />
-                           </font>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" text="ประวัติการซื้อ" textFill="WHITE" GridPane.rowIndex="4">
-                           <font>
-                              <Font name="JasmineUPC" size="32.0" />
-                           </font>
-                           <GridPane.margin>
-                              <Insets left="70.0" top="10.0" />
-                           </GridPane.margin>
-                        </Button>
+                        <GridPane prefHeight="676.0" prefWidth="360.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints maxHeight="208.26669311523438" minHeight="10.0" prefHeight="208.26669311523438" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="132.9999755859375" minHeight="10.0" prefHeight="113.33330688476565" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <ImageView fx:id="userImageView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@image/Default.png" />
+                                 </image>
+                                 <GridPane.margin>
+                                    <Insets left="98.0" />
+                                 </GridPane.margin>
+                              </ImageView>
+                              <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" styleClass="font_jasmine_20pt" stylesheets="@style/PrimaryTheme.css" text="ข้อมูลส่วนตัว" textFill="WHITE" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="70.0" top="10.0" />
+                                 </GridPane.margin>
+                                 <font>
+                                    <Font name="JasmineUPC" size="32.0" />
+                                 </font>
+                              </Button>
+                              <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" styleClass="font_jasmine_20pt" stylesheets="@style/PrimaryTheme.css" text="สินค้าในตะกร้า" textFill="WHITE" GridPane.rowIndex="2">
+                                 <font>
+                                    <Font name="JasmineUPC" size="32.0" />
+                                 </font>
+                                 <GridPane.margin>
+                                    <Insets left="70.0" top="10.0" />
+                                 </GridPane.margin>
+                              </Button>
+                              <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" styleClass="font_jasmine_20pt" stylesheets="@style/PrimaryTheme.css" text="ข้อมูลการขาย" textFill="WHITE" GridPane.rowIndex="3">
+                                 <GridPane.margin>
+                                    <Insets left="70.0" top="10.0" />
+                                 </GridPane.margin>
+                                 <font>
+                                    <Font name="JasmineUPC" size="32.0" />
+                                 </font>
+                              </Button>
+                              <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="200.0" style="-fx-background-color: B4875E; -fx-background-radius: 10;" styleClass="font_jasmine_20pt" stylesheets="@style/PrimaryTheme.css" text="ประวัติการซื้อ" textFill="WHITE" GridPane.rowIndex="4">
+                                 <font>
+                                    <Font name="JasmineUPC" size="32.0" />
+                                 </font>
+                                 <GridPane.margin>
+                                    <Insets left="70.0" top="10.0" />
+                                 </GridPane.margin>
+                              </Button>
+                           </children>
+                        </GridPane>
                      </children>
-                  </GridPane>
+                  </HBox>
                </children>
             </HBox>
          </left>
